# funlog

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING.md  ERROR_TEST_REPORT.md  FINAL_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  README.md  README.zh-CN.md  README_EN.md  README_zh.md  TESTING_SUMMARY.md  devlog.md  run_tests.sh  test_error_messages.sh
.github/: pull_request_template.md
examples/: ERROR_TESTING_README.md  README.md  debug.rs  debug_test.rs  error_examples.rs  error_test_conflicting_options.rs  error_test_duplicate_log_levels.rs  error_test_edge_cases.rs  error_test_invalid_parameters.rs  error_test_spelling_mistakes.rs  error_test_syntax_errors.rs  info.rs  raw_all.rs  raw_combined_options.rs  raw_complex_types.rs  raw_error.rs  raw_error_handling.rs  raw_log_levels_comparison.rs  raw_multiple_params.rs  raw_none.rs  raw_params.rs  raw_position_combinations.rs  raw_position_end.rs  raw_position_end_params.rs  raw_position_end_return.rs  raw_position_end_void.rs  raw_position_start.rs  raw_position_start_and_end_params.rs  raw_position_start_and_end_return.rs  raw_position_start_and_end_void.rs  raw_position_start_params.rs  raw_print.rs  raw_print_with_params.rs  raw_print_with_return.rs  raw_return_value.rs  raw_trace_with_all.rs  raw_void_function.rs  raw_void_with_params.rs  simple.rs  simple_test.rs  (+2 more)
src/: attribute.rs  config.rs  config_builder.rs  error.rs  generics_item_fn.rs  lib.rs  log_template.rs  main.rs  output.rs
tests/: README.md  error_messages_test.rs  raw_test_combined_options.rs  (+24 more)
(+6 files in other folders)
