[package]
name = "funlog"
version = "0.1.0"
edition = "2021"
description = "A procedural macro for tracing Rust function calls"
authors = ["Levy Gu <32436334@qq.com>"]
license = "MIT"
repository = "https://github.com/koory1st/funlog"
homepage = "https://github.com/koory1st/funlog"
documentation = "https://docs.rs/funlog"
readme = "README.md"
keywords = ["logging", "tracing", "proc-macro", "debugging", "instrumentation"]
categories = ["development-tools::debugging", "development-tools::procedural-macro-helpers"]
exclude = [
    "tests/",
    "examples/",
    ".github/",
    "run_tests.sh",
    "COMPLETION_SUMMARY.md"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
once_cell = "1.18"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
gag = "1.0.0"
mock-logger = "0.1.3"
